crates/gpui-storybook-macros/src/snapshots/gpui_storybook_macros__tests__component_story_derive_with_string_expressions_generates_wrapper_story_and_registry_entry.snap
---
source: crates/gpui-storybook-macros/src/tests.rs
expression: snapshot_tokens(expanded)
---
struct __ButtonChipComponentStoryView {
    focus_handle: ::gpui_kit::FocusHandle,
}
impl __ButtonChipComponentStoryView {
    fn view(
        _window: &mut ::gpui_kit::Window,
        cx: &mut ::gpui_kit::App,
    ) -> ::gpui_kit::Entity<Self> {
        ::gpui_kit::AppContext::new(
            cx,
            |cx| Self {
                focus_handle: cx.focus_handle(),
            },
        )
    }
}
impl ::gpui_kit::Focusable for __ButtonChipComponentStoryView {
    fn focus_handle(&self, _cx: &::gpui_kit::App) -> ::gpui_kit::FocusHandle {
        self.focus_handle.clone()
    }
}
impl ::gpui_kit::Render for __ButtonChipComponentStoryView {
    fn render(
        &mut self,
        window: &mut ::gpui_kit::Window,
        cx: &mut ::gpui_kit::Context<Self>,
    ) -> impl ::gpui_kit::IntoElement {
        let _ = &self.focus_handle;
        let _ = window;
        let _ = cx;
        ButtonChip::example()
    }
}
impl ::gpui_storybook::StoryControls for __ButtonChipComponentStoryView {}
impl ::gpui_storybook::Story for __ButtonChipComponentStoryView {
    fn klass() -> &'static str {
        "ButtonChip"
    }
    fn title(cx: &::gpui_kit::App) -> ::std::string::String {
        let _ = cx;
        (::std::string::String::from("Button")).into()
    }
    fn description(cx: &::gpui_kit::App) -> ::std::string::String {
        let _ = cx;
        (["Interactive", " buttons"].concat()).into()
    }
    fn new_view(
        window: &mut ::gpui_kit::Window,
        cx: &mut ::gpui_kit::App,
    ) -> ::gpui_kit::Entity<Self> {
        Self::view(window, cx)
    }
}
#[doc(hidden)]
#[used]
#[unsafe(
    export_name = concat!(
        "__gpui_storybook_story_key__",
        env!("CARGO_PKG_NAME"),
        "__",
        "ButtonChip",
    )
)]
static __gpui_storybook_story_key_marker_ButtonChip: u8 = 0;
gpui_storybook::__inventory::submit! {
    ::gpui_storybook::__registry::StoryEntry::new(concat!(::std::env!("CARGO_PKG_NAME"),
    "-", "ButtonChip"), "ButtonChip", Some("Components"), Some(crate
    ::StorySection::Components as usize), | window, cx | {
    ::gpui_storybook::StoryContainer::panel:: < __ButtonChipComponentStoryView > (window,
    cx) },
    ::gpui_storybook::__registry::StoryRegistrationSource::new(::std::env!("CARGO_PKG_NAME"),
    ::std::env!("CARGO_MANIFEST_DIR"), ::std::file!(), ::std::line!(),),)
    .with_autodoc(::gpui_storybook::__registry::StoryAutodoc::new("", & []))
}
