crates/gpui-storybook-macros/src/snapshots/gpui_storybook_macros__tests__component_story_duplicate_metadata_reports_compile_error.snap
---
source: crates/gpui-storybook-macros/src/lib.rs
expression: snapshot_tokens(expanded)
---
::core::compile_error! {
    "duplicate `title` argument"
}
