crates/gpui-storybook-macros/src/snapshots/gpui_storybook_macros__tests__story_attribute_on_non_struct_reports_compile_error.snap
---
source: crates/gpui-storybook-macros/src/lib.rs
expression: snapshot_tokens(expanded)
---
::core::compile_error! {
    "expected `struct`"
}
