crates/gpui-storybook-macros/src/snapshots/gpui_storybook_macros__tests__story_init_attribute_generates_registry_entry.snap
---
source: crates/gpui-storybook-macros/src/lib.rs
expression: snapshot_tokens(expanded)
---
pub fn setup() {}
gpui_storybook::__inventory::submit! {
    ::gpui_storybook::__registry::InitEntry { init_fn : setup, fn_name : "setup", file :
    ::std::file!(), line : ::std::line!(), }
}
